<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/places_info_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlacesActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/place_name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_margin"
        android:gravity="center_horizontal"
        android:textSize="@dimen/title_text_size"
        tools:text="@string/archaelogical_museum_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_margin_8dp"
        android:gravity="center_horizontal"
        android:text="@string/working_time_text"
        android:textSize="@dimen/body_textsize" />

    <TextView
        android:id="@+id/place_worktime_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_margin_8dp"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:gravity="center_horizontal"
        android:textSize="@dimen/body_textsize"
        tools:text="@string/arch_museum_work_times" />

    <ImageView
        android:id="@+id/place_picture_imageview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:src="@drawable/arch_museum_image" />

    <TextView
        android:id="@+id/place_info_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:textAlignment="textStart"
        android:layout_marginBottom="@dimen/bottom_margin_8dp"
        android:textSize="@dimen/body_textsize"
        tools:text="@string/archaelogical_museum_info" />
</LinearLayout>


</ScrollView>